@@ -1,10 +1,14 @@
 package project.como.domain.post.repository;
 
-import com.querydsl.core.BooleanBuilder;
+import static project.como.domain.image.model.QImage.image;
+import static project.como.domain.post.model.QPost.post;
+import static project.como.domain.post.model.QPostTech.postTech;
+
 import com.querydsl.core.types.dsl.BooleanExpression;
-import com.querydsl.jpa.JPAExpressions;
 import com.querydsl.jpa.impl.JPAQuery;
 import com.querydsl.jpa.impl.JPAQueryFactory;
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -12,17 +16,10 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.support.PageableExecutionUtils;
 import org.springframework.stereotype.Repository;
 import project.como.domain.image.model.Image;
-import project.como.domain.post.dto.*;
+import project.como.domain.post.dto.PostDetailResponseDto;
+import project.como.domain.post.dto.PostPagingResponseDto;
 import project.como.domain.post.model.Category;
 import project.como.domain.post.model.Post;
-import project.como.domain.post.model.Tech;
-
-import java.util.List;
-import java.util.stream.Collectors;
-
-import static project.como.domain.image.model.QImage.*;
-import static project.como.domain.post.model.QPost.*;
-import static project.como.domain.post.model.QTech.*;
 
 @Slf4j
 @Repository
@@ -32,7 +29,7 @@ public class PostCustomRepositoryImpl implements PostCustomRepository {
 
 	public Page<PostPagingResponseDto> findAllByCategoryAndTechs(Category category, List<String> stacks, Pageable pageable) {
 		List<Post> tmp_posts = queryFactory.selectFrom(post)
-				.join(post.techs).fetchJoin()
+				.join(post.techList, postTech).fetchJoin()
 				.where(categoryEq(category)
 						.and(containsTechs(stacks)))
 				.orderBy(post.createdDate.desc())
@@ -46,7 +43,7 @@ public class PostCustomRepositoryImpl implements PostCustomRepository {
 			dto.setTitle(post.getTitle());
 			dto.setCategory(post.getCategory());
 			dto.setState(post.getState());
-			dto.setTechs(post.getTechs().stream().map(Tech::getStack).collect(Collectors.toList()));
+			dto.setTechs(post.getTechList().stream().map((pt) -> pt.getTech().getStack()).toList());
 			dto.setHeartCount(post.getHeartCount());
 			return dto;
 		}).toList();
@@ -63,7 +60,7 @@ public class PostCustomRepositoryImpl implements PostCustomRepository {
 
 	public PostDetailResponseDto findPostDetailById(Long id) {
 		Post result = queryFactory.selectFrom(post)
-				.join(post.techs, tech).fetchJoin()
+				.join(post.techList, postTech).fetchJoin()
 				.leftJoin(post.images, image)
 				.where(post.id.eq(id))
 				.fetchOne();
@@ -74,7 +71,7 @@ public class PostCustomRepositoryImpl implements PostCustomRepository {
 				.body(result.getBody())
 				.category(result.getCategory())
 				.state(result.getState())
-				.techs(result.getTechs().stream().map(Tech::getStack).distinct().collect(Collectors.toList()))
+				.techs(result.getTechList().stream().distinct().map((t) -> t.getTech().getStack()).sorted().toList())
 				.images(result.getImages().stream().map(Image::getUrl).collect(Collectors.toList()))
 				.heartCount(result.getHeartCount())
 				.build();
@@ -84,20 +81,17 @@ public class PostCustomRepositoryImpl implements PostCustomRepository {
 		return category != null ? post.category.eq(category) : null;
 	}
 
-	private BooleanBuilder containsTechs(List<String> stacks) {
-		BooleanBuilder builder = new BooleanBuilder();
+	private BooleanExpression containsTechs(List<String> stacks) {
+		BooleanExpression where = null;
+		if (stacks == null || stacks.isEmpty()) return null;
 
-		if (stacks == null || stacks.isEmpty()) return builder;
-		else {
-			builder.and(
-					post.in(
-							JPAExpressions.select(tech.post)
-									.from(tech)
-									.where(tech.stack.in(stacks))
-					)
-			);
+		for (String stack : stacks) {
+			BooleanExpression exp = post.techList.any().tech.stack.eq(stack);
+			where = (where == null) ? exp : where.or(exp);
 		}
 
-		return builder;
+		return where;
+		// 하나라도 포함되면 Post의 조건에 맞도록 해야함.
+		// 예를 들어, Java, Spring 을 골랐을 때 둘 다 있는 Post만 제시하는 것이 아니라 Java만 있는 게시물과 Spring만 있는 게시물, 둘 다 포함하는 게사물 모두 제시해야함.
 	}
 }
